@@ -6,7 +6,7 @@ Forwarded: not-needed
 
 --- a/Lib/ensurepip/__init__.py
 +++ b/Lib/ensurepip/__init__.py
-@@ -7,6 +7,34 @@ import sysconfig
+@@ -7,6 +7,34 @@
  import tempfile
  from importlib import resources
  
@@ -41,7 +41,7 @@ Forwarded: not-needed
  
  __all__ = ["version", "bootstrap"]
  _PACKAGE_NAMES = ('pip',)
-@@ -144,6 +172,11 @@ def _bootstrap(*, root=None, upgrade=Fal
+@@ -144,6 +172,11 @@
  
      Note that calling this function will alter both sys.path and os.environ.
      """
@@ -55,7 +55,7 @@ Forwarded: not-needed
  
 --- a/Lib/venv/__init__.py
 +++ b/Lib/venv/__init__.py
-@@ -356,8 +356,26 @@ class EnvBuilder:
+@@ -383,8 +383,26 @@
  
      def _setup_pip(self, context):
          """Installs or upgrades pip in a virtual environment"""
