@@ -6,7 +6,7 @@ Origin: upstream, https://github.com/python/cpython/commit/423e77d6de497931585d1
 
 --- a/Doc/conf.py
 +++ b/Doc/conf.py
-@@ -280,6 +280,10 @@ gettext_additional_targets = [
+@@ -291,6 +291,10 @@
      'index',
  ]
  
@@ -19,7 +19,7 @@ Origin: upstream, https://github.com/python/cpython/commit/423e77d6de497931585d1
  
 --- a/Doc/Makefile
 +++ b/Doc/Makefile
-@@ -13,7 +13,7 @@ PAPER        =
+@@ -13,7 +13,7 @@
  SOURCES      =
  DISTVERSION  = $(shell $(PYTHON) tools/extensions/patchlevel.py)
  REQUIREMENTS = requirements.txt
